--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,8 +137,8 @@ services:
     environment:
       POSTGRES_USER: ${PG_DATABASE_USER}
       POSTGRES_PASSWORD: ${PG_DATABASE_PASSWORD}
-    # ports:
-    #   - "5432:5432"
+    ports:
+      - "6432:5432"
     healthcheck:
       test: pg_isready -U ${PG_DATABASE_USER} -h localhost -d postgres
       interval: 10s
@@ -176,8 +176,8 @@ services:
     image: redis
     restart: always
     command: ["--maxmemory-policy", "noeviction"]
-    # ports:
-    #   - "7379:6379"
+    ports:
+      - "7379:6379"
     networks:
       - twenty-network
 
